--- a/day16/pubspec.yaml
+++ b/day16/pubspec.yaml
@@ -23,8 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  google_sign_in: ^5.0.5
+  firebase_auth: ^3.0.1
+  firebase_core: ^1.4.0
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
