--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -173,6 +173,20 @@
             "request": "launch",
             "type": "dart",
             "flutterMode": "profile"
+        },
+        {
+            "name": "day16",
+            "cwd": "day16",
+            "request": "launch",
+            "type": "dart",
+            "args": ["--no-sound-null-safety"]
+        },
+        {
+            "name": "day16 (profile mode)",
+            "cwd": "day16",
+            "request": "launch",
+            "type": "dart",
+            "flutterMode": "profile"
         }
     ]
 }
