--- a/day17/pubspec.yaml
+++ b/day17/pubspec.yaml
@@ -23,8 +23,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  bloc: ^7.0.0
+  flutter_bloc: ^7.0.1
+  equatable: ^2.0.3
+  google_sign_in: ^5.0.5
+  firebase_auth: ^3.0.1
+  firebase_core: ^1.4.0
+  path_provider: ^2.0.2
+  http: ^0.13.3
+  auto_route: ^2.3.0
+  provider: ^5.0.0
+  dartz: ^0.9.2
+  yaml: ^3.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -32,6 +42,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner:
+  auto_route_generator: ^2.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
